Fixed the size inconsistency between buttons and button links (border-box vs. content-box). http://stackoverflow.com/questions/8395349/why-do-a-div-and-a-button-with-the-same-styles-render-at-different-sizes

--- a/src/less/buttons.less
+++ b/src/less/buttons.less
@@ -20,9 +20,14 @@
 	}
 }
 
-button, input[type=submit], input[type=button], .w-button-link {
+button, input[type=submit], input[type=button], a.w-button-link {
+	//'avoid the sizing issues that come with the default border-box model: http://stackoverflow.com/questions/8395349/why-do-a-div-and-a-button-with-the-same-styles-render-at-different-sizes '
+	-moz-box-sizing: content-box;
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+
 	outline: 0; //'removes dotted outline in some browsers'
-	height: 30px; //'set the height and line-height to avoid inconsistency across browsers (noteably IE)'
+	height: 28px; //'set the height and line-height to avoid inconsistency across browsers (noteably IE)'
 	line-height: 14px;
 	cursor: pointer;
 	padding: 0 9px 0 9px;
@@ -44,15 +49,15 @@ button, input[type=submit], input[type=button], .w-button-link {
 	}
 	
 	&.w-small {
-		height: 22px; 
-		line-height:11px; 
+		height: 20px; 
+		line-height:10px; 
 		padding: 0 6px 0 6px;
 	}
 	
 	&.w-large {
-		height: 46px; 
-		line-height:23px; 
-		font-size: 14px; 
+		height: 42px; 
+		line-height:21px;
+		font-size: 14px;
 		padding: 0 20px 0 20px; 
 		border-width:2px; border-radius: 8px;
 	}
@@ -63,17 +68,17 @@ button, input[type=submit], input[type=button], .w-button-link {
 	}
 }
 
-.w-button-link {
+a.w-button-link {
 	display: inline-block;
 	text-decoration: none;
-	line-height: 30px;	
+	line-height: 28px;	
 	
 	&.w-small {
-		line-height:22px;
+		line-height:20px;
 	}
 
 	&.w-large {
-		line-height:46px;
+		line-height:44px;
 	}
 }
 
