--- a/src/less/typography.less
+++ b/src/less/typography.less
@@ -22,6 +22,7 @@ body { font-family:verdana, sans-serif; font-size:12px;  line-height: 20px;}
 
 a, .w-false-link, .w-link-button { color: @brand-color; }
 a:hover, .w-false-link:hover, .w-link-button:hover { color: lighten(@brand-color, 20%); text-decoration: none; }
+a:focus, .w-link-button:focus{ outline:0; }
 a:visited { color: @dark }
 .w-false-link, .w-link-button { text-decoration: underline; cursor: pointer; } 
 
@@ -41,7 +42,7 @@ a:visited { color: @dark }
  link buttons
 */
 
-.w-link-button {
+button.w-link-button {
     display: inline;
     outline: none;
     border: none;
